init repository module

--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
@@ -6,11 +6,10 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        applicationId 'lucascampos.modules'
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
-        versionName '1.0'
+        versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
