adjusts module repository & module base

--- a/repository/src/main/AndroidManifest.xml
+++ b/repository/src/main/AndroidManifest.xml
@@ -4,7 +4,12 @@
 
     <application>
 
-        <activity android:name=".MainActivity" />
+        <activity android:name=".RepositoryActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
