--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 dependencies {
     implementation project(':base')
     implementation project(':repository')
+    implementation project(':pullrequest')
 
     testImplementation 'junit:junit:4.12'
 
