--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,6 @@ dependencies {
     implementation project(':repository')
     implementation project(':pullrequest')
 
-    testImplementation 'junit:junit:4.12'
-
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    testImplementation project(':test')
+    androidTestImplementation project(':test')
 }
