--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -3,9 +3,6 @@ apply from: '../core-module.gradle'
 
 dependencies {
     implementation project(':base')
-
-    testImplementation 'junit:junit:4.12'
-
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    testImplementation project(':test')
+    androidTestImplementation project(':test')
 }
